--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "doc": "jsdoc -c jsdoc.config.json",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -24,6 +25,7 @@
     "@vue/test-utils": "^2.4.4",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jsdoc": "^4.0.2",
     "jsdom": "^24.0.0",
     "prettier": "^3.0.3",
     "vite": "^5.0.11",
